...
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:theme="@style/TextViewMedium"
            android:text="@string/user_registration_label" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="Enter email or Mobile num" />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">

           <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
               android:layout_weight="1"
            android:hint="Enter password"
            android:inputType="textPassword" />
...
            android:layout_marginRight="10dp"
               android:layout_marginTop="16dp"
            android:src="@drawable/ic_eye" />
       </LinearLayout>

        <Button
            android:id="@+id/button_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/register" />

        <GridLayout
...
            android:id="@+id/progressbar"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/loading_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/loading" />
    </LinearLayout>
    </LinearLayout>
...
